@@ -74,7 +74,7 @@ if [ "$TESTRESULT" = "ERROR" ]; then echo ERROR: $TESTNAME;  exit 1; fi
 TESTNAME="Test additional json from wmbusmeters.conf and from meter file"
 TESTRESULT="ERROR"
 
-$PROG --debug --useconfig=tests/config6 --device=simulations/simulation_shell.txt  > $TEST/test_output.txt 2> $TEST/test_stderr.txt
+$PROG --debug --useconfig=tests/config6 --overridedevice=simulations/simulation_shell.txt  > $TEST/test_output.txt 2> $TEST/test_stderr.txt
 
 if [ "$?" = "0" ]
 then
