@@ -19,7 +19,7 @@ TESTRESULT="ERROR"
 cat simulations/serial_aes.msg | grep '^{' | tr -d '#' > $TEST/test_expected.txt
 cat simulations/serial_aes.msg | grep '^[CT]' | tr -d '#' > $TEST/test_input.txt
 
-cat $TEST/test_input.txt | $PROG --useconfig=tests/config9 --device=stdin:rtlwmbus --oneshot > $TEST/test_output.txt 2> $TEST/test_stderr.txt
+cat $TEST/test_input.txt | $PROG --useconfig=tests/config9 --overridedevice=stdin:rtlwmbus --oneshot > $TEST/test_output.txt 2> $TEST/test_stderr.txt
 
 if ! grep -q "(main) all meters have received at least one update, stopping." $TEST/test_stderr.txt
 then
@@ -46,7 +46,7 @@ cat simulations/serial_aes.msg | grep '^{' | tr -d '#' > $TEST/test_expected.txt
 cat simulations/serial_aes.msg | grep '^[CT]' | tr -d '#' > $TEST/test_input.txt
 
 # Read from stdin
-{ cat $TEST/test_input.txt ; sleep 4; } | $PROG --useconfig=tests/config9 --device=stdin:rtlwmbus --exitafter=1s  > $TEST/test_output.txt 2> $TEST/test_stderr.txt
+{ cat $TEST/test_input.txt ; sleep 4; } | $PROG --useconfig=tests/config9 --overridedevice=stdin:rtlwmbus --exitafter=1s  > $TEST/test_output.txt 2> $TEST/test_stderr.txt
 
 if ! grep -q "(serial) exit after " $TEST/test_stderr.txt
 then
