@@ -9,7 +9,7 @@ TESTRESULT="ERROR"
 
 cat simulations/simulation_extras.txt | grep '^{' > $TEST/test_expected.txt
 
-$PROG --useconfig=tests/config8 --device=simulations/simulation_extras.txt 2> $TEST/test_stderr.txt > $TEST/test_output.txt
+$PROG --useconfig=tests/config8 --overridedevice=simulations/simulation_extras.txt 2> $TEST/test_stderr.txt > $TEST/test_output.txt
 
 if [ "$?" = "0" ]
 then
