@@ -43,7 +43,7 @@ Add :verbose to any analyze to get more verbose analyze output.
 
 \fB\--debug\fR for a lot of information
 
-\fB\--device=\fR<device> override device in config files. Use only in combination with --useconfig= option
+\fB\--overridedevice=\fR<device> override device in config files. Can only be used in combination with --useconfig= option
 
 \fB\--donotprobe=\fR<tty> do not auto-probe this tty. Use multiple times for several ttys or specify "all" for all ttys
 
